--- a/src/app/admin/pages/banner/banner-create/banner-create.component.html
+++ b/src/app/admin/pages/banner/banner-create/banner-create.component.html
@@ -70,6 +70,13 @@
                 class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
             </div>
             <div class="mb-5">
+              <label for="image" class="mb-3 block text-base font-medium text-[#07074D]">
+                Image
+              </label>
+              <input type="file" name="name" id="name" formControlName="fileImages" placeholder="Tên Banner"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="mb-5">
               <label for="email" class="mb-3 block text-base font-medium text-[#07074D]">
                 Đường dẫn
               </label>
