--- a/src/app/admin/pages/product/product-edit/product-edit.component.html
+++ b/src/app/admin/pages/product/product-edit/product-edit.component.html
@@ -3,40 +3,118 @@
 
   <div id="main-content" class=" bg-gray-50 relative overflow-y-auto lg:ml-64">
     <main>
-      <h2>Cập nhật sản phẩm</h2>
+      <div>Cập nhật sản phẩm</div>
       <!-- component -->
       <div class="flex items-center justify-center  px-5">
         <!-- Author: FormBold Team -->
         <!-- Learn More: https://formbold.com -->
         <div class="mx-auto w-full ">
-          <form action="https://formbold.com/s/FORM_ID" method="POST">
+          <form [formGroup]="productFormEdit" (ngSubmit)="OnEdit()">
             <div class="mb-5">
               <label for="name" class="mb-3 block text-base font-medium text-[#07074D]">
                 Tên sản phẩm
               </label>
-              <input type="text" name="name" id="name" placeholder="Tên sản phẩm"
+              <input type="text" formControlName="name" name="name" id="name" placeholder="Tên sản phẩm"
                 class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
             </div>
             <div class="mb-5">
-              <label for="email" class="mb-3 block text-base font-medium text-[#07074D]">
+              <label for="name" class="mb-3 block text-base font-medium text-[#07074D]">
+                Hình ảnh
+              </label>
+              <input type="text" name="name" id="name" formControlName="image" placeholder="Tên sản phẩm"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="mb-5">
+              <label for="quantity" class="mb-3 block text-base font-medium text-[#07074D]">
                 Số lượng
               </label>
-              <input type="email" name="email" id="email" placeholder="Số lượng"
+              <input type="number" formControlName="quantity" name="quantity" id="quantity" placeholder="Số lượng"
                 class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
             </div>
             <div class="mb-5">
               <label for="subject" class="mb-3 block text-base font-medium text-[#07074D]">
-                Giá
+                Giá gốc
               </label>
-              <input type="text" name="subject" id="subject" placeholder="Giá"
+              <input type="number" formControlName="price" name="price" id="price" placeholder="Giá"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="mb-5">
+              <label for="promotionPrice" class="mb-3 block text-base font-medium text-[#07074D]">
+                Giá khuyến mãi
+              </label>
+              <input type="number" formControlName="promotionPrice" name="promotionPrice" id="promotionPrice"
+                placeholder="Giá"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
+            </div>
+            <div class="mb-5 flex gap-x-8">
+              <div class="">
+                <label for="cateID" class="mb-3 block text-base font-medium text-[#07074D]">
+                  Danh mục
+                </label>
+                <mat-form-field appearance="fill">
+                  <mat-label>Chọn danh mục</mat-label>
+                  <mat-select disableRipple formControlName="cateID">
+                    <mat-option *ngFor="let cate of listCates" [value]="cate.cateID">{{cate.name}}</mat-option>
+
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="">
+                <label for="subject" class="mb-3 block text-base font-medium text-[#07074D]">
+                  Nhà cung cấp
+                </label>
+                <mat-form-field appearance="fill">
+                  <mat-label>Chọn nhà cung cấp</mat-label>
+                  <mat-select disableRipple formControlName="supplierid">
+                    <mat-option *ngFor="let supplier of listSuppliers"
+                      [value]="supplier.supplierID">{{supplier.name}}</mat-option>
+
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="">
+                <label for="subject" class="mb-3 block text-base font-medium text-[#07074D]">
+                  Thương hiệu
+                </label>
+                <mat-form-field appearance="fill">
+                  <mat-label>Chọn thương hiệu</mat-label>
+                  <mat-select disableRipple formControlName="brandID">
+                    <mat-option *ngFor="let brand of listBrands" [value]="brand.brandID">{{brand.name}}</mat-option>
+
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="mb-5">
+              <label for="subject" class="mb-3 block text-base font-medium text-[#07074D]">
+                FreeShip
+              </label>
+              <input id="link-checkbox" type="checkbox" checked formControlName="isFreeship"
+                class="w-4 h-4 text-blue-600 ml-5 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+            </div>
+            <div class="mb-5">
+              <label for="description" class="mb-3 block text-base font-medium text-[#07074D]">
+                Chi tiết sản phẩm
+              </label>
+              <textarea rows="4" formControlName="description" name="description" id="description"
+                placeholder="Chi tiết sản phẩm"
+                class="w-full resize-none rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"></textarea>
+            </div>
+            <div class="mb-5">
+              <label for="message" class="mb-3 block text-base font-medium text-[#07074D]">
+                MetaKeyword
+              </label>
+              <input type="text" formControlName="metaKeyword" name="metaKeyword" id="metaKeyword"
+                placeholder="MetaKeyword"
                 class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
             </div>
             <div class="mb-5">
               <label for="message" class="mb-3 block text-base font-medium text-[#07074D]">
-                Chi tiết sản phẩm
+                MetaDescription
               </label>
-              <textarea rows="4" name="message" id="message" placeholder="Chi tiết sản phẩm"
-                class="w-full resize-none rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"></textarea>
+              <input type="text" formControlName="metaDescription" name="promotionPrice" id="metaDescription"
+                placeholder="metaDescription"
+                class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md" />
             </div>
             <div>
 
@@ -44,10 +122,9 @@
                 class="inline-block py-3 px-8 mr-2 bg-green-600 cursor-pointer text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Quay
                 lại</a>
 
-              <a href="#" data-mdb-ripple="true" data-mdb-ripple-color="light"
-                class="inline-block py-3 px-8 mr-2 bg-blue-600 cursor-pointer text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg cursor-pointer transition duration-150 ease-in-out">Cập
-                nhật
-              </a>
+              <button type="submit" data-mdb-ripple="true" data-mdb-ripple-color="light"
+                class="inline-block py-3 px-8 mr-2 bg-blue-600 cursor-pointer text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg cursor-pointer transition duration-150 ease-in-out">Tạo
+                mới</button>
 
             </div>
           </form>
@@ -56,7 +133,6 @@
 
 
       <app-footer-admin></app-footer-admin>
-
     </main>
   </div>
 </div>
