--- a/src/app/admin/pages/suppliers/suppliers-delete/suppliers-delete.component.html
+++ b/src/app/admin/pages/suppliers/suppliers-delete/suppliers-delete.component.html
@@ -5,5 +5,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancle</button>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="reloadCurrentRoute()">Ok</button>
+  <button mat-button mat-dialog-close cdkFocusInitial (click)="handleDelete()">Ok</button>
 </div>s
