--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,27 +1,6 @@
 <app-header></app-header>
 <div class="pt-40">
-  <!-- <div class="fade  hidden lg:block " *ngIf="images && images.length > 0 " class="silder">
-    <img *ngFor="let image of images;let i = index " [ngClass]="{'image-active' : selectIndex=== i}" [src]="image.url"
-      [alt]="image.alt" class="object-contain">
-    <div class="carousel-dot-container">
-      <span (click)="selectImage(i)" [ngClass]="{'active' : selectIndex === i}" class="dot"
-        *ngFor="let dot of images;let i =index">
 
-      </span>
-    </div>
-    <div class="flex justify-between items-center absolute top-[50%] text-red-400">
-      <div class="btn-carousel btn-prev  ">
-        <button (click)="OnPrevClick()" class="btn-carousel btn-prev">
-          <fa-icon [icon]="leftIcon"></fa-icon>
-        </button>
-      </div>
-      <div class="btn-carousel btn-next ">
-        <button (click)="OnNextClick()" class="btn-carousel btn-prev">
-          <fa-icon [icon]="nextIcon"></fa-icon>
-        </button>
-      </div>
-    </div>
-  </div> -->
   <swiper (swiper)="setSwiperInstance($event)" [slidesPerView]="1" [navigation]="true"
     [scrollbar]=" { draggable: true }" [pagination]="{ clickable: true } " [loop]="true">
     <ng-template swiperSlide *ngFor="let image of images ">
@@ -31,13 +10,76 @@
     </ng-template>
 
   </swiper>
+
   <!-- tabs -->
+  <div class="px-40 mt-[-80px] z-50 pb-10 bg-[#F8F8FC]">
+    <swiper class=" showNavigator" class="rounded-xl" (swiper)="setSwiperInstance($event)" [slidesPerView]="2"
+      [navigation]="true" [scrollbar]=" { draggable: false }" [pagination]="false " data-swiper-autoplay="5000"
+      [spaceBetween]="10" [loop]="true">
+      <ng-template class=" w-96 mr-2  " swiperSlide *ngFor="let image of listBanner">
+        <img [src]="image" alt="" class="">
+      </ng-template>
+
+    </swiper>
+  </div>
   <!-- end tabs -->
-  <div class="flex flex-col justify-center items-center bg-[#F8F8FC]">
+  <!-- deal -->
+  <div class="px-40 mt-[20px] z-50 pb-10 bg-[#F8F8FC]">
+    <div class="bg-dealBackground bg-no-repeat flex gap-2 pt-3 px-4 pb-6  rounded-t-2xl">
+      <span class="text-white uppercase font-bold text-3xl ">Deal ngon</span>
+      <span class="text-3xl">
+        <fa-icon class="text-[#ffc00e]" [icon]="faBolt"></fa-icon>
+      </span>
+      <span class="text-white inline-block  translate-y-3 uppercase font-bold text-3xl">Hôm nay</span>
+      <div class="text-2xl uppercase text-white">{{timeLeft | date:'h:mm:ss'}}</div>
+    </div>
+    <swiper class=" showNavigator" class="" (swiper)="setSwiperInstance($event)" [slidesPerView]="4"
+      [navigation]="false" [scrollbar]=" { draggable: false }" [pagination]="false " data-swiper-autoplay="5000"
+      [spaceBetween]="10" [loop]="true">
+      <ng-template class=" mr-2 py-4 " class="bg-white" swiperSlide *ngFor="let product of listProduct">
+        <div class="">
+          <a routerLink="/san-pham/{{product.id}}" class="relative block overflow-hidden rounded">
+            <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer"
+              src="{{product.image}}" />
+          </a>
+          <div class="mt-4 px-4">
+            <a href="">
+              <h3 class=" mb-1 text-xs tracking-widest text-gray-500">{{product.brand}}</h3>
+              <div class=" text-xs font-medium text-gray-900">{{product.name}}</div>
+              <div class="flex justify-between">
+                <div>
+                  <p class="mt-1 text-color-primary font-bold">{{product.percentPrice}}đ</p>
+                  <div class="flex">
+                    <p class="mt-1 line-through">{{product.price}}đ</p>
+                    <p class="text-color-primary">-{{product.reducedPrice}}%</p>
+                  </div>
+                </div>
+                <div *ngIf="product.freeShip">
+                  <fa-icon class="text-sm text-[#30cd60]" [icon]="freeShip"></fa-icon>
+                </div>
+              </div>
+            </a>
+            <mat-progress-bar class="h-10" color="accent" mode="determinate" value="40"
+              aria-label="Đã bán"></mat-progress-bar>
+            <span>Đã bán 5</span>
+          </div>
+        </div>
+      </ng-template>
+
+    </swiper>
+  </div>
+  <!-- end deal -->
+  <div class="flex flex-col justify-center items-center  bg-[#F8F8FC]">
 
     <section class=" min-h-screen body-font text-gray-600 sm:px-3 lg:px-40 ">
-      <div class="container mx-auto px-5 py-10">
-        <div class="-m-4 bg-white flex flex-wrap  ">
+
+      <div class="container mx-auto px-5  ">
+        <div class="flex justify-between py-3 px-5  border border-solid border-[#eeeeee] mb-[0.2px] bg-white">
+          <span class="font-bold  text-xl text-[#1b1d29]">Điện thoại</span>
+          <a href="#" class="text-sm text-[#82869e]">Xem tất cả ></a>
+        </div>
+        <div class="  bg-white flex flex-wrap  ">
+
           <div class="w-full  border border-solid border-[#eeeeee] p-4 md:w-1/2  lg:w-1/4"
             *ngFor="let product of listProduct">
             <a routerLink="/san-pham/{{product.id}}" class="relative block overflow-hidden rounded">
@@ -66,9 +108,10 @@
 
         </div>
       </div>
+
     </section>
-    <nav aria-label="Page navigation">
-      <ul class="inline-flex space-x-2">
+    <nav aria-label="Page navigation ">
+      <ul class="inline-flex space-x-2 pt-4">
         <li><button
             class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">
             <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
@@ -97,5 +140,78 @@
       </ul>
     </nav>
   </div>
+  <!-- phụ kiện -->
+  <div class="flex flex-col justify-center items-center pt-4  bg-[#F8F8FC]">
+
+    <section class=" min-h-screen body-font text-gray-600 sm:px-3 lg:px-40 ">
+
+      <div class="container mx-auto px-5  ">
+        <div class="flex justify-between py-3 px-5  border border-solid border-[#eeeeee] mb-[0.2px] bg-white">
+          <span class="font-bold  text-xl text-[#1b1d29]">Phụ kiện</span>
+          <a href="#" class="text-sm text-[#82869e]">Xem tất cả ></a>
+        </div>
+        <div class="  bg-white flex flex-wrap  ">
+
+          <div class="w-full  border border-solid border-[#eeeeee] p-4 md:w-1/2  lg:w-1/4"
+            *ngFor="let product of listProduct">
+            <a routerLink="/san-pham/{{product.id}}" class="relative block overflow-hidden rounded">
+              <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer"
+                src="{{product.image}}" />
+            </a>
+            <div class="mt-4">
+              <a href="">
+                <h3 class=" mb-1 text-xs tracking-widest text-gray-500">{{product.brand}}</h3>
+                <div class=" text-xs font-medium text-gray-900">{{product.name}}</div>
+                <div class="flex justify-between">
+                  <div>
+                    <p class="mt-1 text-color-primary font-bold">{{product.percentPrice}}đ</p>
+                    <div class="flex">
+                      <p class="mt-1 line-through">{{product.price}}đ</p>
+                      <p class="text-color-primary">-{{product.reducedPrice}}%</p>
+                    </div>
+                  </div>
+                  <div *ngIf="product.freeShip">
+                    <fa-icon class="text-sm text-[#30cd60]" [icon]="freeShip"></fa-icon>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+    <nav aria-label="Page navigation">
+      <ul class="inline-flex space-x-2 pt-4">
+        <li><button
+            class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">
+            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+              <path
+                d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+                clip-rule="evenodd" fill-rule="evenodd"></path>
+            </svg></button>
+        </li>
+        <li><button
+            class="w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">1</button>
+        </li>
+        <li><button
+            class="w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">2</button>
+        </li>
+        <li><button
+            class="w-10 h-10 text-white transition-colors duration-150 bg-indigo-600 border border-r-0 border-indigo-600 rounded-full focus:shadow-outline">3</button>
+        </li>
+        <li><button
+            class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 bg-white rounded-full focus:shadow-outline hover:bg-indigo-100">
+            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+              <path
+                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                clip-rule="evenodd" fill-rule="evenodd"></path>
+            </svg></button>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- end phụ kiện -->
 </div>
 <app-footer></app-footer>
