--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -8,6 +8,7 @@
 .swiper-img {
   height: 633px;
   object-fit: cover;
+  width: 100%;
 }
 /* slides.component.scss */
 .slide {
@@ -58,4 +59,8 @@
   to {
       opacity: 1;
   }
+}
+.mat-progress-bar {
+  height: 10px !important;
+  border-radius: 6.66667px;
 }
